2011-11-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* decimal.test: Fixed the testsuite to be at least properly
	  executable, i.e. bad file names and broken Tcl syntax. The
	  single test still but that sahall be a problem for the actual
	  maintainer.

2011-08-09  Andreas Kupries  <andreask@activestate.com>

	* decimal.man: [Bug 3383039]: Fixed syntax errors in the
	documentation of math::decimal, reported by Thomas Perschak
	<tombert@users.sourceforge.net>

2011-03-29  Andreas Kupries  <andreask@activestate.com>

	* linalg.man: Documentation tweak, added keyword 'matrix'.

2011-01-24  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.13 ========================
	*

2011-01-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* symdiff.test: Fixed setup (added std boilerplate).
	* pkgIndex.tcl: Moved symdiff to correct section, requires 8.5,
	not 8.4.

2010-05-24  Andreas Kupries  <andreask@activestate.com>

	* geometry.man: [Bug 3110860]: Renamed this file to avoid the
	* math_geometry.man: conflict with Tcl 8.6's new geometry
	  manpage. Thanks to Reinhard  Max for reporting.

2010-10-19  Kevin B. Kenny  <kennykb@acm.org>

	* symdiff.man:
	* symdiff.tcl:      Added a math::calculus::symdiff package that
	* symdiff.test:     performs symbolic differentiation of Tcl math 
	* pkgIndex.tcl:	    exprs.
	
2010-09-27  Lars Hellstr\"om  <lars_h@users.sourceforge.net>

        * numtheory.test: Fixed bug #3076576.
        * numtheory.dtx:

2010-09-22  Arjen Markus <arjenmarkus@users.sourceforge.net>

	* kruskal.tcl:      Added header to the file

2010-09-21  Arjen Markus <arjenmarkus@users.sourceforge.net>

	* kruskal.tcl:      One-sided test according to Kruskal-Wallis
	* statistics.tcl:   Added test Kruskal-Wallis
	* statistics.man:   Describe Kruskal-Wallis
	* statistics.test:  Added simple test case
	* pkgIndex.tcl:     Bumped version to 0.7.0
